[package]
name = "wamu-core"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of the core Wamu protocol for building threshold signature wallets controlled by multiple decentralized identities."

[dependencies]
aes-gcm = "0.10.2"
crypto-bigint = "0.5.2"
hkdf = "0.12.3"
k256 = "0.13.1"
rand = "0.8.5"
sha2 = "0.10.7"
zeroize = { version = "1.6.0", features = ["alloc", "zeroize_derive"] }
